--- a/Homepage Files/style.css
+++ b/Homepage Files/style.css
@@ -9,16 +9,22 @@
   flex: 1;
 }
 
+/* Styling for the navigation bar */
 .header-nav {
   flex: 2;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  font-family: "Frank Ruhl Libre", serif;
-  font-optical-sizing: auto;
+  font-family: "Questrial", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-optical-sizing: auto;
   font-size: 30px;
+}
+
+/* Prevents the navigation buttons from getting too close */
+.header-nav a {
+  min-width: 300px;
 }
 
 .header-nav a, .header-nav a:hover{
@@ -26,28 +32,56 @@
   text-decoration: none;
 }
 
+/* Search container styling */
 .search-container {
   display: flex;
   align-items: center;
+  position: relative;
+  white-space: nowrap;
+}
+
+.search-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  margin-left: 150px;
+}
+
+.search-input {
+  width: 0;
+  padding: 0;
+  margin: 0;
+  transition: width 0.5s ease, padding 0.5s ease;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  margin-right: 400px;
+}
+
+/* When the input is focused, it takes up 500px width */
+.search-input:focus {
+  width: 500px;
+  padding: 5px 10px;
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Styling for profile icon */
+.header-profile .profile-pic {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+  margin-right: 90px;
 }
 
 .header-profile {
-  flex: 1;
-  display: flex;
-  justify-content: flex-end;
-  font-family: "Frank Ruhl Libre", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 30px;
-  margin-right: 20px;
+  padding: 5px;
 }
-
-.header-profile a, .header-profile a:hover {
-  color: black;
-  text-decoration: none;
-}
-
 
 /* General styles for the recipe highlight section */
 .recipe-highlight {
@@ -60,6 +94,7 @@
     margin-top: 10px;
   }
 
+  /* Styling for the recipe highlight title */
   .recipe-highlight-title {
     display: flex;
     justify-content:  center;
@@ -73,6 +108,7 @@
     margin: auto;
   }
 
+  /* Styling for the recipe highlight description */
   .recipe-highlight-description {
     display: flex;
     justify-content: center;
@@ -85,6 +121,7 @@
     margin: auto;
   }
   
+  /* Styling for the recipe highlight percentage */
   .recipe-highlight-percentage {
     display: flex;
     justify-content: center;
@@ -94,6 +131,7 @@
     margin-top: 30px;
   }
 
+  /* Remove link underline when user hovers over navigation buttons */
   .recipe-highlight a:hover {
     text-decoration: none;
   }
